--- a/00_Modules.ipynb
+++ b/00_Modules.ipynb
@@ -1,37 +1,13 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:973044ead30a70db00fe1ef03d1c85b25acc2019277363f77e179dae0b87ace7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "How to start"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As first step, start grass7 with:\n",
-      "    \n",
-      "    $ grass70 gis/nc_basic/user1\n",
-      "    \n",
-      "Then from the GRASS shell, change the directory, with:\n",
-      "    \n",
-      "    > cd doc/pygrass\n",
-      "    \n",
-      "and then run:\n",
-      "    \n",
-      "    > ipython notebook --pylab inline"
-     ]
-    },
     {
      "cell_type": "heading",
      "level": 1,
@@ -104,16 +80,13 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "from grass.pygrass.functions import looking\n",
       "\n",
       "looking(script, '*command*')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     ]
     },
     {
      "cell_type": "code",
@@ -137,7 +110,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "script.run_command('r.info', map='elevation')"
+      "print script.read_command('r.info', map='elevation')"
      ],
      "language": "python",
      "metadata": {},
@@ -440,7 +413,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "g.region(rast='elevation', flags='p')"
+      "g.region(raster='elevation', flags='p')"
      ],
      "language": "python",
      "metadata": {},
@@ -745,16 +718,6 @@
      "collapsed": false,
      "input": [
       "slp.inputs[\"format\"]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "slp.inputs.format = 'percents'"
      ],
      "language": "python",
      "metadata": {},
@@ -1200,14 +1163,6 @@
      "input": [
       "!python2 mygrassmodule.py key0=pippo key1=pluto,topolino key2=minni,clarabella"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
