--- a/01_GIS_objects.ipynb
+++ b/01_GIS_objects.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:abc27b8651e5bbf4b8ebf95fe8b1cbd00876ec440a13a0a80364382150042917"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -93,7 +94,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "gisdb['ncb7']"
+      "gisdb['loc_ncarolina_spm_base0.3.1']"
      ],
      "language": "python",
      "metadata": {},
@@ -103,7 +104,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "northc = gisdb['ncb7']"
+      "northc = gisdb['loc_ncarolina_spm_base0.3.1']"
      ],
      "language": "python",
      "metadata": {},
@@ -180,7 +181,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "permanent = northc['PERMANENT']"
+      "# fails for simlink (on the live PERMANENT is a simlink to a different directory)\n",
+      "#\n",
+      "#permanent = northc['PERMANENT']"
      ],
      "language": "python",
      "metadata": {},
@@ -190,7 +193,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "permanent.gisdbase"
+      "northc = northc['user1']"
      ],
      "language": "python",
      "metadata": {},
@@ -200,7 +203,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "permanent.location"
+      "northc.gisdbase"
      ],
      "language": "python",
      "metadata": {},
@@ -210,7 +213,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "permanent.name"
+      "northc.location"
      ],
      "language": "python",
      "metadata": {},
@@ -220,7 +223,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "permanent.glist('rast')"
+      "northc.name"
      ],
      "language": "python",
      "metadata": {},
@@ -230,7 +233,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit Mapset('PERMANENT').glist('rast')"
+      "northc.glist('raster')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%timeit Mapset('user1').glist('raster')"
      ],
      "language": "python",
      "metadata": {},
@@ -250,7 +263,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "gcore.list_grouped('rast')['PERMANENT']"
+      "gcore.list_grouped('rast')['user1']"
      ],
      "language": "python",
      "metadata": {},
@@ -260,7 +273,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit gcore.list_grouped('rast')['PERMANENT']"
+      "%timeit gcore.list_grouped('rast')['user1']"
      ],
      "language": "python",
      "metadata": {},
@@ -270,7 +283,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "Mapset('PERMANENT').glist('rast', pattern='el*')"
+      "Mapset('user1').glist('raster', pattern='el*')"
      ],
      "language": "python",
      "metadata": {},
@@ -356,9 +369,55 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#!g.region --help"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "# the following fails (traceback attached below)\n",
+      "\n",
       "with Region(nsres=100., ewres=100.) as region:\n",
       "    print(region.items())\n",
       "print(Region().items())"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```\n",
+      "---------------------------------------------------------------------------\n",
+      "TypeError                                 Traceback (most recent call last)\n",
+      "<ipython-input-51-85994cec4f56> in <module>()\n",
+      "----> 1 with Region(nsres=100., ewres=100.) as region:\n",
+      "      2     print(region.items())\n",
+      "      3 print(Region().items())\n",
+      "\n",
+      "TypeError: __init__() got an unexpected keyword argument 'nsres'\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Region.nsres=100.\n",
+      "Region.ewres=100."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Region()"
      ],
      "language": "python",
      "metadata": {},
